seperate tests & add integration test, and fix test failures